// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions-panel Renders \`actions-panel\` with auto instruction in running 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with full unresolved alarm, but without access 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with links in alarm 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-RuleId.icon.Label"
  >
    Follow the link "Label"|icon|RuleId.icon.Label
  </button>
  <button
    class="action-executeInstruction"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with links in resolved alarm 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-RuleId.icon.Label"
  >
    Follow the link "Label"|icon|RuleId.icon.Label
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with manual instruction in running 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with manual instruction in waiting result 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with parentAlarm with auto meta alarm 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-removeAlarmsFromAutoMetaAlarm"
  >
    Unlink alarm from meta alarm|link_off|removeAlarmsFromAutoMetaAlarm
  </button>
  <button
    class="action-executeInstruction"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with paused manual instruction 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with resolved alarm 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with simple manual instruction in running 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute Manual simple instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with unresolved alarm and flapping status 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-declareTicket"
  >
    Declare ticket|report_problem|declareTicket
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-removeAlarmsFromManualMetaAlarm"
  >
    Unlink alarm from manual meta alarm|link_off|removeAlarmsFromManualMetaAlarm
  </button>
  <button
    class="action-executeInstruction"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with unresolved alarm and ongoing status 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-fastAck"
  >
    Fast ack|check|fastAck
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-removeAlarmsFromManualMetaAlarm"
  >
    Unlink alarm from manual meta alarm|link_off|removeAlarmsFromManualMetaAlarm
  </button>
  <button
    class="action-executeInstruction"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` without assigned_declare_ticket_rules 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-ackRemove"
  >
    Cancel ack|not_interested|ackRemove
  </button>
  <button
    class="action-changeState"
  >
    Change and lock severity|thumbs_up_down|changeState
  </button>
  <button
    class="action-ack"
  >
    Ack|playlist_add_check|ack
  </button>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-associateTicket"
  >
    Associate ticket|local_play|associateTicket
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-history"
  >
    History|history|history
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-removeAlarmsFromManualMetaAlarm"
  >
    Unlink alarm from manual meta alarm|link_off|removeAlarmsFromManualMetaAlarm
  </button>
  <button
    class="action-executeInstruction"
  >
    Running instruction in progress...|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
    disabled="disabled"
  >
    Execute New instruction|assignment|executeInstruction
  </button>
  <button
    class="action-executeInstruction"
  >
    Resume Paused instruction|assignment|executeInstruction
  </button>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` without entity, instructions, but with status stealthy 1`] = `
<div
  class="shared-actions-panel"
>
  <button
    class="action-cancel"
  >
    Cancel alarm|$vuetify.icons.list_delete|cancel
  </button>
  <button
    class="action-fastCancel"
  >
    Fast cancel|delete|fastCancel
  </button>
  <button
    class="action-comment"
  >
    Comment|comment|comment
  </button>
  <button
    class="action-snooze"
  >
    Snooze alarm|alarm|snooze
  </button>
  <button
    class="action-pbehaviorAdd"
  >
    Periodical behavior|pause|pbehaviorAdd
  </button>
  <button
    class="action-addBookmark"
  >
    Add bookmark|$vuetify.icons.bookmark_add|addBookmark
  </button>
  <button
    class="action-variablesHelp"
  >
    List of available variables|help|variablesHelp
  </button>
  <button
    class="action-exportPdf"
  >
    Export alarm to PDF file|assignment_returned|exportPdf
  </button>
  <button
    class="action-removeAlarmsFromManualMetaAlarm"
  >
    Unlink alarm from manual meta alarm|link_off|removeAlarmsFromManualMetaAlarm
  </button>
</div>
`;
